# CO2-Electricity-Analysis

./: 1_DataScience_Challenge.md  2_DataEngineering_Challenge.md  Readme.md  pyproject.toml
datasets/: access-to-electricty.csv  annual-co2-emissions-per-country.csv
spark-local/: README.md  docker-compose.yml
