[project]
name = "onboarding_datascience"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Alfred Feldmeyer", email = "alfred.feldmeyer@squer.io"},
]
dependencies = ["pandas>=2.3.0", "polars>=1.31.0", "ipykernel>=6.29.5", "plotly>=6.1.2", "nbformat>=5.10.4", "wheel>=0.45.1", "scipy==1.15.3", "statsmodels==0.14.2", "pyspark==3.5.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
